# Szakdolgozat

./: .gitignore  Agents.md  CMakeLists.txt  README.md  control.txt  model.txt  vver440.geo  xs_vver440.txt
.obsidian/: workspace.json
obsidian_stove_miniproject/.obsidian/: workspace.json
obsidian_stove_miniproject/mindmaps/: Pipeline.canvas  SRC_Overview.canvas  maincpp.canvas  outline.canvas
src/: control.cpp  control.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  xs.cpp  xs.hpp
szakdoga/: control_hpp.canvas  hpp_overview.canvas  mesh_hpp.canvas  model_hpp.canvas  xs_hpp.canvas
szakdoga/.obsidian/: graph.json  workspace.json
